[tool.poetry]
name = "apartment-lookup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
